INT-fix-41a0.45: Fxied jumping of scroll in some browsers

--- a/design/css/login.css
+++ b/design/css/login.css
@@ -1,7 +1,7 @@
 /* OK =============================================================================================================== */
 body.blitz_body-auth {
   background-image: none;
-  background-color: black;
+  /*background-color: black;*/
   background-repeat: no-repeat;
   /*background-size: auto 100%;*/
   background-size: cover;
@@ -9,8 +9,8 @@ body.blitz_body-auth {
 }
 
 body.body-auth {
+  /*background-color: black;*/
   background-image: none;
-  background-color: black;
 }
 
 @media only screen and (max-width: 479px) {
@@ -180,7 +180,6 @@ body {
 #player_register {
   width: 33em;
   font-size: 1em;
-/*  display: none;*/
   margin: 1em 0;
 }
 
@@ -189,23 +188,7 @@ body {
 }
 
 #login_container .ui-tabs-nav {
-/*  height: 2.35em;*/
   text-align: center;
-}
-
-#login_container .ui-tabs-nav li {
-/*  width:32%;*/
-}
-
-#login_container .ui-tabs-nav li a {
-/*
- display: inline-block;
- float: none;
- width: 100%;
- padding: 5px 0;
- top: 0px;
- margin: 0em;
-*/
 }
 
 
@@ -224,8 +207,4 @@ body {
 .menu_line :not(:last-child):after
 {
   content: ' :: ';
-}
-
-.password_show {
-  /*width: 12em;*/
 }
